# sarych-lm

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: v0_1_synthetic_sanity.yaml  v0_2_tinystories_smoke.yaml  v0_3_30m_tinystories_base.yaml  v0_4_30m_instruct_instruction_lite_lr1e5.yaml  v0_4_30m_instruct_instruction_lite_lr3e6.yaml  v0_4_30m_instruct_instruction_lite_lr5e6.yaml  v0_4_30m_instruct_lite_lr1e5.yaml  v0_4_30m_instruct_lite_lr2e5.yaml  v0_4_30m_instruct_lite_replay_lr1e5.yaml  v0_4_30m_instruct_lite_replay_lr5e6.yaml  v0_4_30m_instruct_xiaomi.yaml
docs/: dev_guide.md  eval_v0_4.md  instruction_lite_factory_v0_4.md  instruction_lite_v0_4.md  model_card_v0_1.md  model_card_v0_2.md  model_card_v0_3.md  model_card_v0_4.md  sft_experimentation_v0_4.md  v0_1_design.md  v0_2_design.md  xiaomi_sft_data.md
eval/: prompts_v0_4.jsonl
evals/: v0_4_instruction_lite_expected.json  v0_4_instruction_lite_prompts.jsonl
prompts/: xiaomi_sft_from_seeds_v1.md
sarych/: __init__.py  checkpoint.py  config.py  data_synthetic.py  data_text.py  env_report.py  model.py  reporting.py  sampling.py  sft.py  tokenizer_bpe.py  train.py  utils.py
scripts/: analyze_sft_jsonl.py  audit_sft_build_filter.py  build_sft_dataset.py  compare_instruction_lite_evals.py  convert_dolly_lite_to_sft.py  diagnose_sft_v0_4.py  download_tinystories.py  env_report.py  eval_instruction_lite_v0_4.py  eval_sarych.py  generate_instruct_v0_4.py  generate_v0_1.py  generate_v0_2.py  generate_v0_3.py  make_instruction_lite_seeds_v0_4.py  make_sft_seed_prompts.py  merge_sft_shards.py  (+16 more)
(+30 files in other folders)
