[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sarych-lm"
version = "0.1.0"
description = "SARYCH-LM v0.1 synthetic sanity training pipeline"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
  "pyyaml",
  "tqdm",
  "tokenizers",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
